<resources>
    <string name="apiKey" translatable="false">AIzaSyCxqbMjCdGdTRLXitb6MghSAim6jGkmHrA</string>
    <string name="senderID" translatable="false">1070875338561</string>
    <string name="app_name" translatable="false">OfertaLoca</string>
    <string name="action_settings">Settings</string>
    <string name="home_logo" translatable="false">Logo</string>
    <string name="home_device_screenshot">Device Screenshot</string>
    <string name="home_im_new">I\'m New</string>
    <string name="home_im_returning">I\'m Affiliated</string>
    <string name="home_welcome_text">Register so you can buy at crazy prices</string>
    <string name="home_welcome_text2">like this:</string>
    <string name="login_header_text">Buy products like this, with till</string>
    <string name="login_header_text_percentage" translatable="false">95%</string>
    <string name="login_header_text2">discount!</string>
    <string name="login_username_hint">Type a username</string>
    <string name="login_email_hint">Type your e-mail</string>
    <string name="login_password1_hint">Create a password</string>
    <string name="login_password2_hint">Confirm your password</string>
    <string name="login_header_text_iphone" translatable="false">iPhone 6 64GB</string>
    <string name="login_header_text_iphone_desc" translatable="false">Space Gray</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="login_create_account">Create Account</string>
    <string name="facebook_app_id" translatable="false">480804465450769</string>
    <string name="title_activity_megapop">Auctions</string>
    <string name="auction_current_amount">Current Price</string>
    <string name="auction_remaining_time">Remaining Time</string>
    <string name="list_price_0">List Price: %1$.2f</string>

    <!-- Toast Messages -->
    <string name="toast_password_mismatch">Password don\'t match!</string>
    <string name="toast_creating_account">Creating Account…</string>
    <string name="toast_biddingnow">Bidding now for </string>
    <string name="toast_biddingscheduled">Scheduling bids for </string>
    <string name="toast_coming_soon">Coming soon…</string>
    <string name="toast_taking_to_login">Coming soon…</string>
    <string name="toast_error_rest">Error in Rest Service</string>
    <string name="toast_empty_stream">Error: Empty stream response</string>
    <string name="toast_empty_response">Error: Empty response.</string>
    <string name="toast_user_exists">A user already exists with that username.</string>


    <!-- Unit Api Connector Routes -->
    <string name="unit_server_route" translatable="false">http://ofertaloca.hecticus.com</string>
    <string name="api_route_registeremail" translatable="false">/api/v1/client</string>
    <string name="api_route_registerfb" translatable="false">/api/v1/client</string>

    <!-- OfertaLoca Services Routes -->
    <string name="ofertaloca_server_route" translatable="false">http://ofertaloca.hecticus.com</string>
    <string name="api_route_listauctions" translatable="false">/api/v1/auctions</string>
    <string name="api_route_listauctions_open" translatable="false">/api/v1/auctions</string>
    <string name="api_route_listauctions_coming" translatable="false">/api/v1/auctions</string>
    <string name="api_route_listauctions_winners" translatable="false">/api/v1/auctions</string>
    <string name="api_route_listauction_detailbyid" translatable="false">/api/v1/auction/</string>
    <string name="api_route_bid" translatable="false">/api/v1/auction/%1$d/bid/%2$d</string>
    <string name="api_route_schedulebid" translatable="false">/api/v1/auction/%1$d/schedulebid/%2$d</string>
    <string name="api_route_get_remaining_bids" translatable="false">/api/v1/client/%1$d</string>


    <!-- Navigation Tabs -->
    <string name="tab1">All</string>
    <string name="tab2">Open</string>
    <string name="tab3">Coming</string>
    <string name="tab4">Winners</string>

    <string name="main_product_image">Main Product Image</string>
    <string name="auction_default_price">$0</string>
    <string name="auction_default_time" translatable="false">00:00:10</string>
    <string name="auction_default_remainingbids">You have %1$d \n bids on your account</string>
    <string name="auction_bidnow">Bid Now!</string>
    <string name="auction_bidbutton_accept">Accept</string>
    <string name="auction_bidprogram_text">Program bids</string>
    <string name="auction_bidprogram_edit_hint">Amount of bids</string>
    <string name="auction_buynowbutton_text">Buy for just %1$s</string>
    <string name="product_name">Product name</string>
    <string name="auction_maxperformance_user_pic">Highest performing user pic</string>
    <string name="auction_maxperformance_user_text">Highest Performing User</string>
    <string name="auction_maxperformance_user_name">Lois Lane</string>

    <!--  Shared Preferences -->
    <string name="prefs_user_category">Detalles de Usuario</string>
    <string name="prefs_payment_category">Payment details</string>
    <string name="prefs_push_category">PUSH Notifications</string>
    <string name="prefs_userid_key" translatable="false">user_id</string>
    <string name="prefs_userid_summ">The UserID to test bids with.</string>
    <string name="prefs_userid_tittle">User ID</string>
    <string name="prefs_nickname_key" translatable="false">nickname</string>
    <string name="prefs_nickname_summ">The nickname to send tests bids with.</string>
    <string name="prefs_nickname_tittle">User nickname</string>
    <string name="prefs_registration_id_key" translatable="false">registration_id</string>
    <string name="prefs_registration_id_summ">Registration ID to send PUSH</string>
    <string name="prefs_app_version_key" translatable="false">app_version</string>
    <string name="prefs_app_version_summ">Current App Version</string>

    <string name="search_settings">Search</string>
    <string name="user_settings">User</string>
    <string name="search_hint">Search Auctions</string>
    <string name="push_new_auction">New Auction!</string>
    <string name="login_enter">Enter</string>
    <string name="login_username_or_email_hint">username or e-mail</string>
    <string name="login_password_hint">password</string>
    <string name="toast_logging_in">Logging you in</string>
    <string name="toast_user_exists_but_logged">You already have an account. Logging in.</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_auctions">Auctions</string>
    <string name="drawer_buy_bids">Buy Bids</string>
    <string name="drawer_my_orders">My Orders</string>
    <string name="drawer_bid_history">Bid History</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_remaining_bids">Remaining Bids: %1$d</string>
    <string name="prefs_email_key" translatable="false">client_email</string>
    <string name="prefs_remaining_bids_key" translatable="false">remaining_bids</string>
    <string name="check_remaining_bids">Sync Remaining Bids</string>
    <string name="toast_logging_out">Logging you out…</string>
    <string name="toast_getting_bids">Getting available bids…</string>
    <string name="select_bid_pack">Select Bid Pack</string>
    <string name="buy_with_card">Buy with Credit Card</string>
    <string name="buy_with_msisdn">Buy with Phone Number</string>
    <string name="select_payment_method">Select Payment Method</string>

    <string name="pack1_text">250 Bids \n $4,99</string>
    <string name="pack2_text">650 Bids \n $9,99</string>
    <string name="pack3_text">Our best package: \n 250 Weekly Bids for just $4,99/day. \n SUBSCRIBE NOW!</string>

    <string name="label_owner">Cardholder</string>
    <string name="valid_thru">Good Thru</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_number">Card Number</string>
    <string name="carrier">Carrier</string>
    <string name="cardholder_name">Cardholder\'s Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="carrier_prompt">Select your carrier</string>
    <string name="toast_missing_api_call">Missing Cable and Wireless API implementation.</string>
    <string name="push_message_received">Push Message Received:</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="prefs_user_profile_pic" translatable="false">profile_picture_path</string>
    <string name="toast_profile_pic_loaded">Profile Pic Loaded!</string>
    <string name="uploadProfilePic_toolbar_title">Upload Profile Pic</string>
    <string name="settingsActivity_toolbar_title">Settings</string>
    <string name="prefs_push_enabled" translatable="false">push_enabled</string>


    <string-array name="carriers_array" translatable="false">
        <item>Movistar</item>
        <item>Cable Wireless</item>
    </string-array>

</resources>
