<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OfertalocaActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_settings"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_search_white_24dp" />

        />
    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="@string/user_settings"
        android:icon="@android:drawable/ic_menu_info_details"/>

</menu>
