<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hecticus.ofertaloca.testapp.SignupActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_header_text"
            android:id="@+id/login_header_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_header_text_percentage"
            android:layout_below="@id/login_header_text"
            android:id="@+id/login_header_text_pecentage"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_header_text2"
            android:layout_below="@id/login_header_text_pecentage"
            android:id="@+id/login_header_text2"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/imageView2"
            android:layout_below="@+id/login_header_text2"
            android:src="@drawable/home_iphone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_header_text_iphone"
            android:layout_below="@id/imageView2"
            android:id="@+id/login_header_text_iphone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_header_text_iphone_desc"
            android:layout_below="@id/login_header_text_iphone"
            android:id="@+id/login_header_text_iphone_desc"
            android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

            <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facebook_login"
                android:id="@+id/facebook_login"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_dark"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mainBlue"
                android:layout_below="@id/facebook_login"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edittext_light"
            android:layout_marginBottom="10dp"
            android:id="@+id/username"
            android:inputType="text"
            android:hint="@string/login_username_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textEmailAddress"
            android:layout_below="@id/username"
            android:background="@drawable/edittext_light"
            android:layout_marginBottom="10dp"
            android:id="@+id/email"
            android:hint="@string/login_email_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPassword"
            android:layout_below="@id/email"
            android:background="@drawable/edittext_light"
            android:layout_marginBottom="10dp"
            android:id="@+id/password"
            android:hint="@string/login_password1_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPassword"
            android:layout_below="@id/password"
            android:background="@drawable/edittext_light"
            android:id="@+id/confirmpassword"
            android:hint="@string/login_password2_hint"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_create_account"
                android:textColor="@drawable/button_text_dark"
                android:id="@+id/create_account"
                android:background="@drawable/button_selector_dark"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>

