<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hecticus.ofertaloca.testapp.SignupActivity"
    android:orientation="vertical">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">

        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_login"
            android:id="@+id/facebook_login"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_dark"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/mainBlue"
            android:layout_below="@id/facebook_login"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You can also enter your username"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:id="@+id/login_also_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/mainBlue"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edittext_light"
            android:layout_marginBottom="10dp"
            android:id="@+id/username"
            android:inputType="text"
            android:hint="@string/login_username_or_email_hint"
            android:layout_below="@+id/login_also_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_light"
            android:layout_marginBottom="10dp"
            android:id="@+id/password"
            android:hint="@string/login_password_hint"
            android:layout_below="@id/username" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_enter"
                android:textColor="@drawable/button_text_dark"
                android:id="@+id/login_button"
                android:background="@drawable/button_selector_dark"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>

