<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <movile.com.creditcardguide.view.CreditCardView
            android:id="@+id/creditCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:labelOwner="@string/label_owner"
            app:labelDateExp="@string/valid_thru">

        </movile.com.creditcardguide.view.CreditCardView>

        <LinearLayout
            android:layout_below="@+id/creditCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
            android:id="@+id/ed_owner_name"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Cardholder's Name"
            android:inputType="textCapCharacters"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_light"/>

        <EditText
            android:id="@+id/ed_card_number"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Card Number"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_light"/>


        <EditText
            android:id="@+id/ed_exp_date"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Exp Date (MM/YY)"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_light"/>


        <EditText
            android:id="@+id/ed_cvv"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="CVV"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_light"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/check_remaining_bids"
                android:background="@drawable/button_dark"
                android:text="@string/buy_with_card"
                android:layout_marginLeft="20dp"
                android:textColor="@drawable/button_text_dark"
                android:textAllCaps="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>